# vfio-sensor-bridge

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  INSTALL.md  INSTALL.zh.md  Makefile  README.md  README.zh.md
agent-linux/: Cargo.toml
agent-linux/src/: cli.rs  config.rs  config_edit.rs  hba.rs  linux.rs  main.rs  sensors.rs  signals.rs  smartctl.rs
crates/vsb-protocol/: Cargo.toml
crates/vsb-protocol/src/: lib.rs
hostd/: Cargo.toml
hostd/src/: config.rs  hooks.rs  kernel.rs  linux.rs  main.rs  runtime.rs
kernel/: Makefile  vsb_hwmon.c
kernel/include/uapi/: vfio_sensor_bridge.h
packaging/: agent.toml  hostd.toml  modules-load.conf
packaging/dkms/: dkms.conf
packaging/scripts/: install-agent.sh  install-host.sh  pve-smoke.sh  uninstall-agent.sh  uninstall-host.sh
packaging/smoke/: vsb-smoke.c
packaging/systemd/: vfio-sensor-bridge-agent.service  vfio-sensor-bridge-hostd.service
vsbctl/: Cargo.toml
vsbctl/src/: main.rs  qm.rs  smoke.rs  status.rs
