[workspace]
members = [
    "crates/vsb-protocol",
    "hostd",
    "agent-linux",
    "vsbctl",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

[workspace.dependencies]
anyhow = "1"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
vsb-protocol = { path = "crates/vsb-protocol" }
